--- a/Win/TextFieldEvaluatedValueUC.xaml
+++ b/Win/TextFieldEvaluatedValueUC.xaml
@@ -4,19 +4,20 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="100" d:DesignWidth="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition />
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <Label Content="Evaluated result:"
                Margin="3"
-               />
-        <Label Content="{Binding Path=formatString}"
-               Grid.Row="1"
-               Margin="9,3,3,3"
                Padding="0"
                />
+        <TextBlock Text="{Binding Path=formatString}"
+                   Grid.Row="1"
+                   Margin="9,3"
+                   Padding="0"
+                   />
     </Grid>
 </UserControl>
