--- a/Win/TextFieldSelectObjectUC.xaml
+++ b/Win/TextFieldSelectObjectUC.xaml
@@ -4,12 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="500">
+             d:DesignHeight="100" d:DesignWidth="500">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition />
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <Button Content="Select Object"
                 Padding="6,0"
@@ -20,11 +20,12 @@
         <Label Content="Evaluated result:"
                Grid.Row="1"
                Margin="3"
-               />
-        <Label Content="{Binding Path=formatString}"
-               Grid.Row="2"
-               Margin="9,3,3,3"
                Padding="0"
                />
+        <TextBlock Text="{Binding Path=formatString}"
+                   Grid.Row="2"
+                   Margin="9,3"
+                   Padding="0"
+                   />
     </Grid>
 </UserControl>
