--- a/Win/TextWindow.xaml
+++ b/Win/TextWindow.xaml
@@ -1,12 +1,13 @@
 ﻿<Window x:Class="Text.WPF.TextWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:libconvert="clr-namespace:Rhino.Windows.Converters;assembly=Rhino.Windows"
+        xmlns:libconvert="clr-namespace:RhinoWindows.Converters;assembly=RhinoWindows"
         Title="Text"
-        Height="300" Width="300"
+        Height="450" Width="400"
         MinWidth="300"
         MinHeight="300"
         ShowInTaskbar="False"
+        WindowStartupLocation="CenterOwner"
         >
     <Window.Resources>
         <libconvert:DrawingColorConverter x:Key="DrawingColorConverter" />
@@ -151,17 +152,18 @@
                   VerticalAlignment="Top"
                   IsChecked="{Binding Path=annotativeScalingEnabled}"
                   />
-        <TextBox Margin="3"
-                    Grid.Row="6"
-                    Grid.ColumnSpan="3"
-                    AcceptsReturn="True"
-                    AcceptsTab="True"
-                    TextWrapping="Wrap"
-                    TextAlignment="{Binding Path=TextAlignment}"
-                    Text="{Binding Path=text}"
-                    FontWeight="{Binding Path=FontWeight}"
-                    FontStyle="{Binding Path=FontStyle}"
-                    />
+        <TextBox Name="textBox"
+                 Margin="3"
+                 Grid.Row="6"
+                 Grid.ColumnSpan="3"
+                 AcceptsReturn="True"
+                 AcceptsTab="True"
+                 TextWrapping="Wrap"
+                 TextAlignment="{Binding Path=TextAlignment}"
+                 Text="{Binding Path=text}"
+                 FontWeight="{Binding Path=FontWeight}"
+                 FontStyle="{Binding Path=FontStyle}"
+                 />
 
         <Grid Grid.Row="7" Grid.ColumnSpan="3" Margin="0">
             <Grid.ColumnDefinitions>
@@ -175,6 +177,7 @@
                     HorizontalAlignment="Left"
                     Margin="3"
                     Padding="10,0"
+                    IsDefault="True"
                     VerticalAlignment="Center" Click="ButtonClickOK"
                 />
             <Button Content="Cancel"
@@ -183,6 +186,7 @@
                     HorizontalAlignment="Left"
                     Margin="3"
                     Padding="10,0"
+                    IsCancel="True"
                     VerticalAlignment="Center" Click="ButtonClickCancel"
                 />
         </Grid>
