--- a/Win/TextFieldAddDocumentTextWindow.xaml
+++ b/Win/TextFieldAddDocumentTextWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Text.WPF.TextFieldAddDocumentTextWindow"
+﻿<Window x:Class="Text.Win.TextFieldAddDocumentTextWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Add Document Text"
