--- a/Win/TextFieldEvaluatedValueUC.xaml
+++ b/Win/TextFieldEvaluatedValueUC.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Text.WPF.TextFieldEvaluatedValueUC"
+﻿<UserControl x:Class="Text.Win.TextFieldEvaluatedValueUC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
