--- a/Win/TextFieldKeyValueListUC.xaml
+++ b/Win/TextFieldKeyValueListUC.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Text.WPF.TextFieldKeyValueListUC"
+﻿<UserControl x:Class="Text.Win.TextFieldKeyValueListUC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
