--- a/Win/TextFieldSelectObjectUC.xaml
+++ b/Win/TextFieldSelectObjectUC.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Text.WPF.TextFieldSelectObjectUC"
+﻿<UserControl x:Class="Text.Win.TextFieldSelectObjectUC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
