--- a/Win/TextFieldWindow.xaml
+++ b/Win/TextFieldWindow.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="Text.WPF.TextFieldWindow"
+﻿<Window x:Class="Text.Win.TextFieldWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:myWPF="clr-namespace:Text.WPF"
+        xmlns:myWPF="clr-namespace:Text.Win"
         Title="Text Field"
         Height="360"
         Width="530"
